# flameview

./: .gitignore  Cargo.toml  README.md
.agent/: AGENTS.md  check.sh  setup.sh
.agent/examples/: criterion_bench.rs
.agent/hooks/: pre-push.sh
.github/workflows/: actionlint.yml  benchmarks.yml  flamegraph.yml  fuzz.yml  lint.yml  miri.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  build.rs  lib.rs  main.rs  profile.rs  run.rs  summarize.rs
crates/cli/src/cli/: opts.rs
crates/cli/src/viewer/: app.rs  mod.rs  spark_tree_view.rs  test_harness.rs
crates/cli/tests/: build.rs  cli.rs  flamegraph.rs  flameview.rs  loader_stream.rs  profile.rs  summarize_snapshot.rs  tui_agg_property.rs  tui_bad_len.rs  tui_nav_snapshot.rs  tui_spark_tree_snapshot.rs  view.rs
crates/cli/tests/fixtures/simple-example/: Cargo.toml
crates/cli/tests/snapshots/: large_15_80.snap  medium_30_90.snap  small_default.snap  tui_navigation.snap  tui_spark_tree.snap
crates/cli/tests/support/: mock_exec.rs
crates/flameview/: Cargo.toml
crates/flameview/benches/: add_one.rs  load_collapsed.rs  load_largest.rs
crates/flameview/src/: arena.rs  input.rs  lib.rs  summarize.rs
crates/flameview/src/loader/: collapsed.rs  mod.rs
crates/flameview/tests/: collapsed_basic.rs  collapsed_suite.rs  flame_tree.rs  fuzz_regression.rs  summarize.rs
crates/flameview/tests/snapshots/: summarize__summary_limits_lines_and_coverage.snap
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/summarize/: crash-365590c63669747b
fuzz/fuzz_targets/: fuzz_add_one.rs
scripts/: perf_snippet.py  setup.sh
tests/data/: large.txt  medium.txt  perl.txt  small.txt  small_self.txt
tests/flamegraph_fixture/: Cargo.toml
tests/flamegraph_fixture/src/: main.rs
