[package]
name    = "flameview-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
libafl           = { version = "0.15", default-features = false, features = ["std"] }
libafl_libfuzzer = { version = "0.15", package = "libafl_libfuzzer" }
flameview        = { path = "../crates/flameview" }

[[bin]]
name = "fuzz_add_one"
path = "fuzz_targets/fuzz_add_one.rs"
test = false
doc = false
bench = false
