[package]
name    = "flameview-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
libafl           = { version = "0.15", default-features = false, features = ["std"] }
libfuzzer_sys = { version = "0.15", package = "libafl_libfuzzer" }
flameview        = { path = "../crates/flameview" }

# This binary is run by `.github/workflows/fuzz.yml`; keep name/path in sync.
[[bin]]
name = "summarize"
path = "fuzz_targets/summarize.rs"
test = false
doc = false
bench = false

[package.metadata]
cargo-fuzz = true
