[package]
name = "flameview-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
flameview = { path = "../flameview" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
cargo_metadata = "0.19"

[dev-dependencies]
insta = "1"
tempfile = "3"
which = "4"
assert_cmd = "2"
libc = "0.2"
serde_json = "1"

[[bin]]
name = "flameview"
path = "src/bin/flameview.rs"

[[bin]]
name = "cargo-flameview"
path = "src/bin/cargo-flameview.rs"
