[package]
name = "flameview"
version = "0.1.0"
edition = "2021"
description = "Compact, text-first exploration of FlameGraph data"
license = "MIT OR Apache-2.0"

[dependencies]
smallvec = "1"
indexmap = "2"
roxmltree = "0.19"

[dev-dependencies]
quickcheck = "1"
criterion = { version = "0.5", features = ["html_reports"] }
