[package]
name = "flameview"
version = "0.1.0"
edition = "2021"
description = "Compact, text-first exploration of FlameGraph data"
license = "MIT OR Apache-2.0"
autobenches = false

[features]
# Optional speedups for tests and benchmarks. Coding agents enable
# `bench-fast` and `test-fast` for quick feedback; CI omits them to run
# exhaustive suites.
bench-fast = []
test-fast = []

[dependencies]
smallvec = "1"
indexmap = "2"
roxmltree = "0.19"

[dev-dependencies]
quickcheck = "1"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
cfg-if = "1"

[[bench]]
name = "load_collapsed"
harness = false

[[bench]]
name = "load_largest"
harness = false
